Implemented Dashboard controller and Twitch service

--- a/ZBot/appsettings.json
+++ b/ZBot/appsettings.json
@@ -12,6 +12,7 @@
         "oAuthToken": ""
     },
 
-    "connectionSettings": {
-    }
+    "appRedirectURL": "http://localhost:53628/dashboard",
+    "twitchURL_GET": "https://id.twitch.tv/oauth2/authorize",
+    "twitchURL_POST": "https://id.twitch.tv/oauth2/token"
 }
