--- a/ZBot/appsettings.json
+++ b/ZBot/appsettings.json
@@ -7,9 +7,7 @@
     },
 
     "appSettings": {
-        "clientID": "wwqvmentego4volic66z9kgiws0u42",
-        "clientSecret": "",
-        "oAuthToken": ""
+        "clientID": "wwqvmentego4volic66z9kgiws0u42"
     },
 
     "appRedirectURL": "http://localhost:53628/dashboard",
