--- a/ZBot/appsettings.json
+++ b/ZBot/appsettings.json
@@ -7,7 +7,7 @@
     },
 
     "appSettings": {
-        "clientID": "wwqvmentego4volic66z9kgiws0u42"
+        "clientID": "ID_HERE"
     },
 
     "appRedirectURL": "http://localhost:53628/dashboard",
